--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,18 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
 .blur {
-    backdrop-filter: blur(5px);
-    background: #ff980066;
+  backdrop-filter: blur(5px);
+  background: #ff980066;
 }
 
 @layer utilities {
-    .py-content {
-        @apply py-5 md:py-6 lg:py-7 xl:py-8;
-    }
-    .pb-content {
-        @apply pb-5 md:pb-6 lg:pb-7 xl:pb-8;
-    }
+  .py-content {
+    @apply py-6 md:py-5 lg:py-7 xl:py-8;
+  }
+
+  .pb-content {
+    @apply pb-6 md:pb-5 lg:pb-7 xl:pb-8;
+  }
 }
 
 input[type="text"],
@@ -30,15 +32,25 @@ input[type="week"],
 select[multiple],
 textarea,
 select {
-    @apply border border-gray-300 rounded-md shadow-none focus:ring-orange-500 focus:border-orange-500;
+  @apply border border-gray-300 shadow-none ring-orange-500 focus:rounded-md focus:border-orange-500;
 }
+
 input[type="checkbox"],
 input[type="radio"] {
-    @apply text-orange-500 focus:ring-orange-500  border border-gray-300;
+  @apply border-gray-300 text-orange-500 ring-orange-500 focus:border;
 }
+
 input[type="checkbox"] {
-    @apply rounded ;
+  @apply rounded;
 }
+
 input[type="radio"] {
-    @apply rounded-full ;
+  @apply rounded-full;
+}
+
+.btn {
+  @apply lg:w-auto relative w-full rounded-md  py-2 px-6 text-sm font-semibold  disabled:opacity-60;
+}
+.btn-default {
+  @apply bg-gray-800 text-white;
 }
